# minebot

./: .gitignore  dev_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup-hooks.sh
.githooks/: pre-commit
configuration/: debug.json  settings.json
configuration/localization/: en-US.json  tr.json
data/: minebot.db
docs/: CommandSystem.md  MessageSystem.md  SuggestionSystem.md  WebSocketSystem.md
src/: __init__.py  __main__.py
src/components/: __init__.py  menus.py  modals.py  models.py
src/components/menus/: ticket.py
src/core/: global_state.py
src/data_types/: __init__.py
src/database/: __init__.py  base.py  session.py
src/database/models/: __init__.py  punishment_log.py  punishment_log_model.py  temporart_action_model.py  temporary_action.py  temporary_action_model.py  ticket_channel.py  ticket_info_model.py  user.py  user_model.py
src/database/repositories/: __init__.py  punishment_log.py  punishment_log_repository.py  temporary_action.py  temporary_action_repository.py  ticket_channel.py  ticket_channel_repository.py  ticket_info_repository.py  user.py  user_repository.py
src/database/schemas/: __init__.py  punishment_log.py  punishment_log_schema.py  temporary_action.py  temporary_action_schema.py  ticket_channel_schema.py  ticket_info_schema.py  user.py  user_schema.py
src/database/services/: __init__.py  punishment_log.py  user.py  (+7 more)
src/debug/: debugger.py
src/events/: guild_boost.py  link_account_listener.py  ready.py
src/extensions/: __init__.py  ban.py  test.py
src/helper/: __init__.py  channel.py  command.py  command_helper.py  event.py  message.py  message_helper.py  minecraft.py  minecraft_helper.py  modal.py  punishment.py  time.py  user.py  wiki.py
src/hooks/: minecraft.py
src/model/: __init__.py  config.py  config_keys.py  message.py  model_enums.py  ready.py  schemas.py  settings_enums.py
src/settings/: __init__.py  json_wrapper.py
src/types/: timed_types.py
src/utils/: __init__.py  file_utils.py
src/websocket/: __init__.py  action_registry.py  event_registry.py  listener.py  manager.py  server.py
(+52 files in other folders)
